# mutagen

./: .gitignore  .hlint.yaml  LICENSE  Mutagen.cabal  README.md  cabal.project  cabal.project.freeze  mutagen.cabal
.devcontainer/: devcontainer.json
.github/workflows/: haskell.yml
papers/: TODO.md
papers/ast22/: main.tex  references.bib
papers/ast22/results/: aggregate
papers/ast22/results/ifc/mutagen-base/: prop_ssni_copy_bug10.MUTAGEN_BASE.csv  prop_ssni_copy_bug11.MUTAGEN_BASE.csv  prop_ssni_copy_bug13.MUTAGEN_BASE.csv
papers/ast22/results/ifc/mutagen-no-fifo/: prop_ssni_copy_bug6.MUTAGEN_NO_FIFO.csv  prop_ssni_copy_bug8.MUTAGEN_NO_FIFO.csv
papers/ast22/results/ifc/mutagen-no-reset/: prop_ssni_copy_bug6.MUTAGEN_NO_RESET.csv
papers/ast22/tikz/: ifc-fr.tikz  ifc-mttf.tikz  wasm-fr.tikz  wasm-legend.tikz  wasm-mttf.tikz
papers/fse22/: Makefile  TODO.md  main.bbl  main.tex  rebuttal.md  references.bib  reviews.md
papers/fse22/results/ifc/mutagen-base/: prop_ssni_copy_bug16.MUTAGEN_BASE.csv  prop_ssni_copy_bug19.MUTAGEN_BASE.csv
papers/fse22/results/ifc/mutagen-no-fifo/: prop_ssni_copy_bug11.MUTAGEN_NO_FIFO.csv  prop_ssni_copy_bug13.MUTAGEN_NO_FIFO.csv  prop_ssni_copy_bug2.MUTAGEN_NO_FIFO.csv
papers/fse22/results/ifc/mutagen-no-reset/: prop_ssni_copy_bug11.MUTAGEN_NO_RESET.csv  prop_ssni_copy_bug13.MUTAGEN_NO_RESET.csv  prop_ssni_copy_bug17.MUTAGEN_NO_RESET.csv
papers/fse22/tikz/: wasm-fr.tikz
papers/icse21-src/: Makefile  main.bbl  main.blg  main.tex  references.bib
papers/icse22/: Makefile  main.bbl  main.blg  main.out  main.tex
papers/icse22/results/ifc/mutagen-base/: prop_ssni_copy_bug2.MUTAGEN_BASE.csv  prop_ssni_copy_bug9.MUTAGEN_BASE.csv
papers/icse22/results/ifc/mutagen-no-fifo/: prop_ssni_copy_bug19.MUTAGEN_NO_FIFO.csv  prop_ssni_copy_bug5.MUTAGEN_NO_FIFO.csv
papers/icse22/results/ifc/mutagen-no-reset/: prop_ssni_copy_bug5.MUTAGEN_NO_RESET.csv
papers/icse22/tikz/: ifc-mttf.tikz  wasm-mttf.tikz
papers/icst22/: main.bbl  main.blg  main.tex  rebuttal.md  references.bib
papers/icst22/results/ifc/mutagen-base/: prop_ssni_copy_bug18.MUTAGEN_BASE.csv  prop_ssni_copy_bug7.MUTAGEN_BASE.csv
papers/icst22/results/ifc/mutagen-no-fifo/: prop_ssni_copy_bug1.MUTAGEN_NO_FIFO.csv  prop_ssni_copy_bug14.MUTAGEN_NO_FIFO.csv  prop_ssni_copy_bug16.MUTAGEN_NO_FIFO.csv  prop_ssni_copy_bug17.MUTAGEN_NO_FIFO.csv  prop_ssni_copy_bug9.MUTAGEN_NO_FIFO.csv
papers/icst22/results/ifc/mutagen-no-reset/: prop_ssni_copy_bug1.MUTAGEN_NO_RESET.csv  prop_ssni_copy_bug14.MUTAGEN_NO_RESET.csv  prop_ssni_copy_bug15.MUTAGEN_NO_RESET.csv  prop_ssni_copy_bug4.MUTAGEN_NO_RESET.csv  prop_ssni_copy_bug7.MUTAGEN_NO_RESET.csv
papers/icst22/tikz/: ifc-fr.tikz  ifc-mttf.tikz  wasm-mttf.tikz
papers/oopsla-21/: _TZ_34837-obiwan.dvi  _TZ_34837-obiwan.out  _TZ_34837-obiwan.tex  _TZ_34837-obiwan.xcp  main.bbl  main.blg  main.out  main.tex  rebuttal.md  references.bib  reviews.md
papers/oopsla-21/results/ifc/mutagen-no-reset/: prop_ssni_copy_bug12.MUTAGEN_NO_RESET.csv  prop_ssni_copy_bug18.MUTAGEN_NO_RESET.csv  prop_ssni_copy_bug9.MUTAGEN_NO_RESET.csv
papers/oopsla-21/tikz/: ifc-fr.tikz  ifc-mttf.tikz  wasm-fr.tikz  wasm-legend.tikz  wasm-mttf.tikz
papers/oopsla21/: main.tex
papers/oopsla21/results/ifc/fuzzchick/: .RData  results.csv
papers/oopsla21/results/ifc/mutagen-base/: prop_ssni_copy_bug0.MUTAGEN_BASE.csv  prop_ssni_copy_bug1.MUTAGEN_BASE.csv  prop_ssni_copy_bug12.MUTAGEN_BASE.csv  prop_ssni_copy_bug15.MUTAGEN_BASE.csv  prop_ssni_copy_bug17.MUTAGEN_BASE.csv  prop_ssni_copy_bug3.MUTAGEN_BASE.csv  prop_ssni_copy_bug4.MUTAGEN_BASE.csv  prop_ssni_copy_bug5.MUTAGEN_BASE.csv  prop_ssni_copy_bug6.MUTAGEN_BASE.csv
papers/oopsla21/results/ifc/mutagen-no-fifo/: prop_ssni_copy_bug0.MUTAGEN_NO_FIFO.csv  prop_ssni_copy_bug10.MUTAGEN_NO_FIFO.csv  prop_ssni_copy_bug12.MUTAGEN_NO_FIFO.csv  prop_ssni_copy_bug15.MUTAGEN_NO_FIFO.csv  prop_ssni_copy_bug18.MUTAGEN_NO_FIFO.csv  prop_ssni_copy_bug3.MUTAGEN_NO_FIFO.csv  prop_ssni_copy_bug4.MUTAGEN_NO_FIFO.csv  prop_ssni_copy_bug7.MUTAGEN_NO_FIFO.csv
papers/oopsla21/results/ifc/mutagen-no-reset/: prop_ssni_copy_bug0.MUTAGEN_NO_RESET.csv  prop_ssni_copy_bug10.MUTAGEN_NO_RESET.csv  prop_ssni_copy_bug2.MUTAGEN_NO_RESET.csv  prop_ssni_copy_bug8.MUTAGEN_NO_RESET.csv
papers/oopsla21/tikz/: wasm-legend.tikz
papers/sigconf-10pages/: main.bbl  main.blg  main.out  references.bib
papers/sigconf-10pages/results/ifc/fuzzchick/: .Rhistory
src/: Tracer.hs
src/Test/: Mutagen.hs
src/Test/Mutagen/: Exception.hs  Fragment.hs  Lazy.hs  Mutant.hs  Mutation.hs  Position.hs  Property.hs  Shell.hs  TH.hs  Test.hs  Tracer.hs
src/Test/Mutagen/TH/: Arbitrary.hs  Fragmentable.hs  Lazy.hs  Mutable.hs  Util.hs
src/Test/Mutagen/Test/: Batch.hs  Config.hs  Driver.hs  Loop.hs  Report.hs  State.hs  Terminal.hs
src/Test/Mutagen/Tracer/: Bitmap.hs  Plugin.hs  Trace.hs  TraceLogger.hs  Tree.hs
src/Tracer/: Bitmap.hs  Plugin.hs  Trace.hs  TraceLogger.hs  Tree.hs
test/re/: Main.hs
test/re/RE/: Match.hs  Spec.hs  Types.hs
(+1110 files in other folders)
