cabal-version:  2.2

name:           Mutagen
version:        0.1.0.0
synopsis:       Property-based testing framework for Haskell using type-preserving mutations.
description:    Please see the README on GitHub at <https://github.com/agustinmista/Mutagen#readme>
category:       Testing
homepage:       https://github.com/OctopiChalmers/Mutagen#readme
bug-reports:    https://github.com/OctopiChalmers/Mutagen/issues
author:         Agustin Mista
copyright:      2021 Agustin Mista
maintainer:     mista@chalmers.se
license:        MIT
license-file:   LICENSE
build-type:     Simple

extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/OctopiChalmers/Mutagen

flag MUTAGEN_NO_LAZY
  default: False
flag MUTAGEN_NO_FIFO
  default: False

library
  exposed-modules:
    Tracer
    Test.Mutagen
    Test.Mutagen.Test
    Test.Mutagen.Property
    Test.Mutagen.Exception
    Test.Mutagen.Mutation
    Test.Mutagen.Shell
    Test.Mutagen.Lazy
  hs-source-dirs:
    src
  build-depends:
      base >=4.7 && <5
    , containers
    , random
    , QuickCheck
    , pqueue
    , extra
    , time
    , pretty-simple
    , pretty-tree
    , ansi-terminal
    , process
    , ghc
    , syb
  ghc-options:
    -Wall
  default-extensions:
    CPP
  default-language:
    Haskell2010
  if flag(MUTAGEN_NO_LAZY)
    cpp-options: -DMUTAGEN_NO_LAZY
  if flag(MUTAGEN_NO_FIFO)
    cpp-options: -DMUTAGEN_NO_FIFO
