cabal-version:  2.2

name:           mutagen
version:        0.1.0.0
synopsis:       Property-based testing framework for Haskell using type-preserving mutations.
description:    Please see the README on GitHub at <https://github.com/agustinmista/mutagen#readme>
category:       Testing
homepage:       https://github.com/OctopiChalmers/mutagen#readme
bug-reports:    https://github.com/OctopiChalmers/mutagen/issues
author:         Agustin Mista
copyright:      2021 Agustin Mista
maintainer:     mista@chalmers.se
license:        MIT
license-file:   LICENSE
build-type:     Simple

extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/OctopiChalmers/mutagen

flag MUTAGEN_TH_DEBUG
  default: False

library
  exposed-modules:
    Test.Mutagen
    Test.Mutagen.Property
    Test.Mutagen.Mutant
    Test.Mutagen.Mutation
    Test.Mutagen.Fragment
    Test.Mutagen.Exception
    Test.Mutagen.Lazy
    Test.Mutagen.Shell
    Test.Mutagen.TH
    Test.Mutagen.Tracer
    Test.Mutagen.Tracer.Plugin
    Test.Mutagen.Tracer.Trace
    Test.Mutagen.Tracer.TraceLogger
    Test.Mutagen.Tracer.Tree
    Test.Mutagen.Tracer.Bitmap
  other-modules:
    Test.Mutagen.Test
    Test.Mutagen.Test.Config
    Test.Mutagen.Test.State
    Test.Mutagen.Test.Loop
    Test.Mutagen.Test.Batch
    Test.Mutagen.Test.Report
    Test.Mutagen.Test.Driver
    Test.Mutagen.Test.Terminal
    Test.Mutagen.TH.Arbitrary
    Test.Mutagen.TH.Mutable
    Test.Mutagen.TH.Lazy
    Test.Mutagen.TH.Fragmentable
    Test.Mutagen.TH.Util
  hs-source-dirs:
    src
  build-depends:
      base >=4.7 && <5
    , containers
    , random
    , QuickCheck
    , pqueue
    , extra
    , time
    , pretty-simple
    , pretty-tree
    , ansi-terminal
    , process
    , ghc
    , syb
    , array
    , template-haskell
    , th-desugar
    , ansi-terminal
  ghc-options:
    -Wall
  default-extensions:
    CPP
  default-language:
    Haskell2010
  if flag(MUTAGEN_TH_DEBUG)
    cpp-options: -DMUTAGEN_TH_DEBUG

executable test-re
  main-is:
    Main.hs
  hs-source-dirs:
    test/re
  other-modules:
    RE.Types
    RE.Match
    RE.Spec
  default-language:
    Haskell2010
  ghc-options:
    -Wall -O2 -threaded
  build-depends:
      base >=4.7 && <5
    , mutagen
